# CIFAR10-MLTraining

./: OPTIMIZATION_GUIDE.md  README.md  example_usage.py  example_visualization.py  main.py  model_cifar.py  preprocess.py  pyproject.toml  requirements_visualization.txt  run_complete_training.py  train.py  train_optimized.py  visualization.py
plots_complete/plots_complete/: classification_report.txt
